--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
+/android/
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
-
-# Imported translations (automatically generated from CSV files)
-*.translation
-
-# Mono-specific ignores
-.mono/
-data_*/
-mono_crash.*.json
+# droqen ignores
+*.zip
